superscript alignment fix

--- a/src/style.sass
+++ b/src/style.sass
@@ -522,3 +522,8 @@ textarea.squiggle
 
 .header
     border-top: solid 6px var(--stripe, transparent)
+
+sup
+    vertical-align: top
+    position: relative
+    top: -0.3em
